--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "portfolio-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6"
-  }
+    "name": "portfolio-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "NODE_OPTIONS='--inspect' next",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "13.0.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "styled-components": "^5.3.6"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.11",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "^5.46.0",
+        "@typescript-eslint/parser": "^5.46.0",
+        "babel-plugin-styled-components": "^2.0.7",
+        "eslint": "8.29.0",
+        "eslint-config-next": "13.0.6",
+        "eslint-config-prettier": "^8.5.0",
+        "modern-css-reset": "^1.4.0",
+        "prettier": "^2.8.1",
+        "typescript": "^4.9.4"
+    }
 }
