--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "module": "esnext",
     "target": "es6",
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -14,8 +18,14 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "incremental": true
   },
-  "include": ["src/**/*", "next.config.js"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "next.config.js"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
