--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "eslint": "8.29.0",
         "eslint-config-next": "13.0.6",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "modern-css-reset": "^1.4.0",
         "prettier": "^2.8.1",
         "typescript": "^4.9.4"
