--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
         "@chakra-ui/react": "^2.4.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "firebase": "^9.15.0",
         "framer-motion": "^6.5.1",
         "next": "13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.40.0",
+        "react-icons": "^4.7.1",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
