--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@emotion/styled": "^11.10.5",
         "firebase": "^9.15.0",
         "framer-motion": "^6.5.1",
+        "image-validator": "^1.2.1",
         "next": "13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
