--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^2.4.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "bootstrap": "^3.4.1",
         "firebase": "^9.15.0",
         "framer-motion": "^6.5.1",
         "image-validator": "^1.2.1",
@@ -21,6 +22,8 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.40.0",
         "react-icons": "^4.7.1",
+        "react-paginate": "^8.1.4",
+        "sass": "^1.57.1",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
