--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^2.4.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@react-google-maps/api": "^2.17.1",
         "bootstrap": "^3.4.1",
         "firebase": "^9.15.0",
         "framer-motion": "^6.5.1",
