--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^3.4.1",
         "firebase": "^9.15.0",
         "framer-motion": "^6.5.1",
+        "google-map-react": "^2.2.0",
         "image-validator": "^1.2.1",
         "next": "13.0.6",
         "react": "18.2.0",
